--- a/fourbyfour/index.html
+++ b/fourbyfour/index.html
@@ -53,8 +53,8 @@
             <ul>
               <li>Thursday, May 26 at 7:00 pm</li>
               <li>Friday, May 27 at 7:00 pm</li>
-              <li>Saturday, May 28 at 4:00 pm</li>
-            </ul><a href="https://odc.secure.force.com/ticket/?_ga=2.234779421.2098805509.1649436505-1909123880.1600909191#/events/a0S5b00000BXZzNEAX" target="_blank">
+              <li>Saturday, May 28 at 4:00 pm<super>*</super></li>
+            </ul><a href="https://odc.dance/fourbyfour" target="_blank">
               <button tabindex="-1">Buy tickets</button></a>
           </p>
         </div>
@@ -67,8 +67,9 @@
         <p>Choreographed by Emily Hansel and co-created by dancers Alex Carrington, Mia J. Chong, Shareen DeRyan, and Chelsea Reichert, <i>Four by Four</i> is a messy attempt at refusing productivity. Since beginning work in November 2021, the artists have been practicing the radical act of not knowing. They’ve been fighting their capitalist tendencies, taking their time, embracing messiness, and prioritizing adaptability. <i>Four by Four</i>, featuring original music composed by Sophia Cotraccia and Bed Juodvalkis and lighting design by Thomas Bowersox, is a contemporary dance that is simultaneously light-hearted, serious, ordinary, and one-of-a-kind.</p>
         <p><i>Four by Four</i> is made possible by contributions from the California Arts Council, ODC Theater’s Rental Discount Initiative, Steppin’ Out Dance Studio, and RoundAntennae.</p>
         <p>Tickets are available at a variety of price points and no one will be turned away for lack of funds. Ticket buyers are encouraged to consider their economic status when deciding which tickets to purchase. If price is a barrier for you, please email <a href="mailto:emily@emilyhansel.me" target="_blank">emily@emilyhansel.me</a> to receive a complimentary ticket.</p>
+        <p><super>*</super> Saturday's performance will include a free, pre-show event for kids ages 5-12. <a href="/fourbyfour/kids">Learn more and RSVP.</a></p>
         <h2>Accessibility</h2>
-        <p><strong>Attend the in-person performance</strong><br>The performance is just over an hour long and will include audience breaks/intermissions every 15-20 minutes. ODC Theater is an ADA accessible building and includes ADA accessible all-gender bathrooms. All audience members will be required to wear a mask throughout the duration of their visit to ODC Theater.</p><a href="https://odc.secure.force.com/ticket/?_ga=2.234779421.2098805509.1649436505-1909123880.1600909191#/events/a0S5b00000BXZzNEAX" target="_blank">
+        <p><strong>Attend the in-person performance</strong><br>The performance is just over an hour long and will include audience breaks/intermissions every 15-20 minutes. ODC Theater is an ADA accessible building and includes ADA accessible all-gender bathrooms. All audience members will be required to wear a mask throughout the duration of their visit to ODC Theater.</p><a href="https://odc.dance/fourbyfour" target="_blank">
           <button tabindex="-1">Get tickets</button></a>
         <p><strong>Watch the performance online</strong><br>A film version of <i>Four by Four</i> will be available on-demand July 1-31, 2022. This video will include open captions in English. You will be emailed instructions for accessing the film on or before July 1, 2022.</p><a href="/fourbyfour/video">
           <button tabindex="-1">Get the film</button></a>
