--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       ga('send', 'pageview');
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="/assets/js/index.js"></script>
+    <script src="/assets/js/index.js?v=2"></script>
     <script src="./assets/js/app.js?v=2"></script>
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
   </body>
