--- a/photos/index.html
+++ b/photos/index.html
@@ -75,7 +75,7 @@
       ga('send', 'pageview');
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="/assets/js/index.js"></script>
+    <script src="/assets/js/index.js?v=2"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
