--- a/choreography/index.html
+++ b/choreography/index.html
@@ -159,7 +159,7 @@
       ga('send', 'pageview');
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="/assets/js/index.js"></script>
+    <script src="/assets/js/index.js?v=2"></script>
     <script>sessionStorage.seen = true;</script>
   </body>
 </html>
