--- a/pug/_main_template.html
+++ b/pug/_main_template.html
@@ -47,6 +47,6 @@
       ga('send', 'pageview');
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="/assets/js/index.js"></script>
+    <script src="/assets/js/index.js?v=2"></script>
   </body>
 </html>
