--- a/fourbyfour/program.html
+++ b/fourbyfour/program.html
@@ -57,9 +57,9 @@
         </div><img class="img-profile" src="../../assets/img/fourbyfour/program_program.png" alt="Program">
         <div class="text-center">
           <p>PART ONE</p>
-          <p> <i>pause</i></p>
+          <p><i>pause</i></p>
           <p>PART TWO</p>
-          <p> <i>pause</i></p>
+          <p><i>pause</i></p>
           <p>PART THREE</p>
         </div><img class="img-profile" src="../../assets/img/fourbyfour/program_credits.png" alt="Credits">
         <div class="text-center">
@@ -70,13 +70,9 @@
             Additional music:“Romance” by Dmitri Shostakovich, arranged by Béla Detrekoy, performed by Sophia Cotraccia</p>
           <p>Lighting design by<br><b>Thomas Bowersox</b></p>
           <p>Production management by<br><b>Thomas Bowersox</b></p>
-          <p>
-             <i>Four by Four</i> is made possible by contributions from the California Arts Council, ODC Theater’s Rental Discount Initiative, Steppin’ Out Dance Studio, RoundAntennae, and a multitude of generous individual donors.</p>
+          <p><i>Four by Four</i> is made possible by contributions from the California Arts Council, ODC Theater’s Rental Discount Initiative, Steppin’ Out Dance Studio, RoundAntennae, and a multitude of generous individual donors.</p>
         </div><img class="img-profile" src="../../assets/img/fourbyfour/program_note.png" alt="A note from Emily">
-        <p> 
-          TODO TODO Hey, there’s nothing to get, get what you get, here’s what we’ve been exploring. Something funny about our laid back anti capitalist process and turning that into a literal product that is a show that we have to advertise and charge people to attend. Goes hand in hand with another goal, which is to account for some things to ignore them in the studio. Process and product. Anti capitalism. Thanks for coming and watching. Prioritizing the dancers’ experience, employees, a decent wage, a thorough contract crafted by all of us, ongoing consent. For transparency’s sake, here’s the project budget. Also here’s how you can donate if you want to further support the work.
-          —Emily
-        </p><img class="img-profile" src="../../assets/img/fourbyfour/program_artists.png" alt="Artists">
+        <p>TODO —Emily</p><img class="img-profile" src="../../assets/img/fourbyfour/program_artists.png" alt="Artists">
         <p> <img class="img-profile" src="../../assets/img/fourbyfour/emily2.jpeg" alt="TODO"><b>Emily Hansel (Choreographer) </b>is a San Francisco-based dancer, choreographer, dance teacher, arts administrator, and artist advocate. Originally from Rochester, Minnesota, Emily received her BFA in Dance from the University of South Florida. Emily currently dances for Post:ballet, Robert Moses’ KIN, Christy Funsch, and Mark Foehringer Dance Project. Emily has also performed Cunningham repertory in <i>Signals from the West: Bay Area Artists In Conversation with Merce Cunningham at 100</i>and danced with Garrett + Moulton Productions, FACT/SF, ZiRu Dance, The Anata Project, Talli Jackson, Marika Brussel, Alma Esperanza Cunningham, and SOULSKIN Dance, among others </p>
         <p>Emily’s choreographic work centers the dancer’s experience. Most recently, Emily was commissioned to create a new work for the Berkeley Ballet Theater Studio Company, which premiered in March 2022 at BAMPFA. <i>Four by Four</i>is Emily’s first self-produced, evening-length choreographic work. Emily is a RoundAntennae choreographer, under the mentorship of KT Nelson. </p>
         <p>Emily advocates for equitable and ethical working conditions for dancers, and she has written numerous articles on this topic for the “Life as a Modern Dancer” blog. Emily is a proud member of the Leadership Committee at Dance Artists’ National Collective. </p>
