stylistic improvements ala Emily

--- a/fourbyfour/program.html
+++ b/fourbyfour/program.html
@@ -56,11 +56,11 @@
           </ul>
         </div><img class="img-profile" src="../../assets/img/fourbyfour/program_program.png" alt="Program">
         <div class="text-center">
-          <p>PART ONE</p>
-          <p><i>pause</i></p>
-          <p>PART TWO</p>
-          <p><i>pause</i></p>
-          <p>PART THREE</p>
+          <h3>PART ONE</h3>
+          <p><i class="thin">pause</i></p>
+          <h3>PART TWO</h3>
+          <p><i class="thin">pause</i></p>
+          <h3>PART THREE</h3>
         </div><img class="img-profile" src="../../assets/img/fourbyfour/program_credits.png" alt="Credits">
         <div class="text-center">
           <p>Choreographed and directed by<br><b>Emily Hansel</b></p>
