--- a/fourbyfour/program.html
+++ b/fourbyfour/program.html
@@ -54,14 +54,14 @@
             <li>Friday, May 27 at 7:00 pm</li>
             <li>Saturday, May 28 at 4:00 pm</li>
           </ul>
-        </div><img class="img-profile" src="../../assets/img/fourbyfour/program_program.png" alt="Program">
+        </div><img class="img-profile img-heading" src="../../assets/img/fourbyfour/program_program.png" alt="Program">
         <div class="text-center">
           <h3>PART ONE</h3>
           <p><i class="thin">pause</i></p>
           <h3>PART TWO</h3>
           <p><i class="thin">pause</i></p>
           <h3>PART THREE</h3>
-        </div><img class="img-profile" src="../../assets/img/fourbyfour/program_credits.png" alt="Credits">
+        </div><img class="img-profile img-heading" src="../../assets/img/fourbyfour/program_credits.png" alt="Credits">
         <div class="text-center">
           <p>Choreographed and directed by<br><b>Emily Hansel</b></p>
           <p>Co-created and performed by<br><b>Alex Carrington</b><br><b>Mia J. Chong</b><br><b>Shareen DeRyan</b><br><b>Chelsea Reichert</b></p>
@@ -71,9 +71,9 @@
           <p>Lighting design by<br><b>Thomas Bowersox</b></p>
           <p>Production management by<br><b>Thomas Bowersox</b></p>
           <p><i>Four by Four</i> is made possible by contributions from the California Arts Council, ODC Theater’s Rental Discount Initiative, Steppin’ Out Dance Studio, RoundAntennae, and a multitude of generous individual donors.</p>
-        </div><img class="img-profile" src="../../assets/img/fourbyfour/program_note.png" alt="A note from Emily">
-        <p>TODO —Emily</p><img class="img-profile" src="../../assets/img/fourbyfour/program_artists.png" alt="Artists">
-        <p> <img class="img-profile" src="../../assets/img/fourbyfour/emily2.jpeg" alt="TODO"><b>Emily Hansel (Choreographer) </b>is a San Francisco-based dancer, choreographer, dance teacher, arts administrator, and artist advocate. Originally from Rochester, Minnesota, Emily received her BFA in Dance from the University of South Florida. Emily currently dances for Post:ballet, Robert Moses’ KIN, Christy Funsch, and Mark Foehringer Dance Project. Emily has also performed Cunningham repertory in <i>Signals from the West: Bay Area Artists In Conversation with Merce Cunningham at 100</i>and danced with Garrett + Moulton Productions, FACT/SF, ZiRu Dance, The Anata Project, Talli Jackson, Marika Brussel, Alma Esperanza Cunningham, and SOULSKIN Dance, among others </p>
+        </div><img class="img-profile img-heading" src="../../assets/img/fourbyfour/program_note.png" alt="A note from Emily">
+        <p>TODO —Emily</p><img class="img-profile img-heading" src="../../assets/img/fourbyfour/program_artists.png" alt="Artists">
+        <p> <img class="img-profile img-heading" src="../../assets/img/fourbyfour/emily2.jpeg" alt="TODO"><b>Emily Hansel (Choreographer) </b>is a San Francisco-based dancer, choreographer, dance teacher, arts administrator, and artist advocate. Originally from Rochester, Minnesota, Emily received her BFA in Dance from the University of South Florida. Emily currently dances for Post:ballet, Robert Moses’ KIN, Christy Funsch, and Mark Foehringer Dance Project. Emily has also performed Cunningham repertory in <i>Signals from the West: Bay Area Artists In Conversation with Merce Cunningham at 100</i>and danced with Garrett + Moulton Productions, FACT/SF, ZiRu Dance, The Anata Project, Talli Jackson, Marika Brussel, Alma Esperanza Cunningham, and SOULSKIN Dance, among others </p>
         <p>Emily’s choreographic work centers the dancer’s experience. Most recently, Emily was commissioned to create a new work for the Berkeley Ballet Theater Studio Company, which premiered in March 2022 at BAMPFA. <i>Four by Four</i>is Emily’s first self-produced, evening-length choreographic work. Emily is a RoundAntennae choreographer, under the mentorship of KT Nelson. </p>
         <p>Emily advocates for equitable and ethical working conditions for dancers, and she has written numerous articles on this topic for the “Life as a Modern Dancer” blog. Emily is a proud member of the Leadership Committee at Dance Artists’ National Collective. </p>
         <p>When she isn’t performing or choreographing, Emily teaches ballet and contemporary to students ages 3-18 and works in administrative roles for a number of artists/companies in addition to producing her own work.</p>
@@ -83,10 +83,12 @@
         <p> <img class="img-profile" src="../../assets/img/fourbyfour/chelsea.jpg" alt="Chelsea Reichert, wearing purple, twists her arms and torso while her braid swings out to the opposite side."><b>Chelsea Reichert (Dancer/Co-creator) </b>is a freelance dance artist originally from Kansas, and currently based in the Bay Area. She received a BFA in dance from Marymount Manhattan College, and also studied at the San Francisco Conservatory of Dance. She’s grateful for the friends and teachers inside and outside of these structures that have influenced her work deeply. Since living in the Bay Area, she’s had the pleasure of creating and performing with Maurya Kerr/tinypistol, Sharp&Fine, kickbal, Courtney Mazeika, Kinetech Arts, Nicole von Arx, Larry Arrington, Risa Jaroslow, and Emily Hansel. She’s stoked to be working with Emily, Shareen, Mia, and Alex on this project.</p>
         <p><br></p>
         <p> <b>Sophia Cotraccia (Composer/Musician) </b>is a senior at Oberlin College and Conservatory, where they study musical and religious traditions from South Asia. Sophia plays the violin, the drumset, and the steelpan, and enjoys writing and recording music in her free time. They hail originally from Ithaca, NY and look forward to returning to the East Coast upon graduating.</p>
+        <p><br></p>
         <p> <b>Ben Juodvalkis (Composer/Musician)</b>
           <composes>original music for dance, film, theater, corporate events, and museum installations. He has created scores for over 50 organizations and has had his music performed on four continents. Ben works from his studio in San Francisco as well as on location with his mobile custom built electronic instruments.</composes>
         </p>
-        <p> <b>Thomas Bowersox (Lighting Designer and Stage Manager) </b>is a lighting designer, production manager, and technical director, based in San Francisco. He graduated from the University of Southern Florida with a BA in Lighting Design. Select companies Thomas has worked with include ODC/Dance, 32 Sounds, The Independent, ACT, Deborah Slater Dance Theater, Club Fugazi, Capital Repertory Theater, and New York Live Arts.</p><img class="img-profile" src="../../assets/img/fourbyfour/program_connect.png" alt="Connect">
+        <p><br></p>
+        <p> <b>Thomas Bowersox (Lighting Designer and Stage Manager) </b>is a lighting designer, production manager, and technical director, based in San Francisco. He graduated from the University of Southern Florida with a BA in Lighting Design. Select companies Thomas has worked with include ODC/Dance, 32 Sounds, The Independent, ACT, Deborah Slater Dance Theater, Club Fugazi, Capital Repertory Theater, and New York Live Arts.</p><img class="img-profile img-heading" src="../../assets/img/fourbyfour/program_connect.png" alt="Connect">
         <p>Please take a moment to fill out this brief, anonymous, demographic survey. (This information is important for Emily to have so that she can apply for grants and get funding for future projects.)</p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf5rjziTMGGLXBav_yak8t62o0iqyEnpGYg5VBKOed3IgpQbQ/viewform?usp=sf_link" target="_blank">
           <button tabindex="-1">Demographic survey</button></a>
         <p>You’re invited to write a note to the artists, or to share any feelings or responses you have about today’s show, either anonymously or with your name attached.</p><a href="https://docs.google.com/forms/d/e/1FAIpQLSd-HMX6v9WYP5ykwJZG2fT78-QDQMO6cz96zwQkcGHeUz8Oyg/viewform?usp=sf_link" target="_blank">
