ODC theatre PDF

--- a/fourbyfour/program.html
+++ b/fourbyfour/program.html
@@ -95,6 +95,7 @@
           <button tabindex="-1">Share a response</button></a>
         <p>If you want to stay in touch, you can email Emily at <a href="mailto:emily@emilyhansel.me">emily@emilyhansel.me </a>or subscribe to her email newsletters to stay in the loop.</p><a href="https://docs.google.com/forms/d/e/1FAIpQLScB-Vb7sSYFlD8ob0Lc_rr00DsfiYI31Um1NMOlfp72rIpiOw/viewform?usp=sf_link" target="_blank">
           <button tabindex="-1">Subscribe</button></a>
+        <p style="margin: 2.5rem 0 1rem; display: flex; justify-content: center"><img src="../../assets/img/fourbyfour/kids/tiles.png" width="240px" style="margin: 0"></p><a href="assets/ABOUT_ODC_THEATER.pdf?v=1">Learn more about ODC theatre</a>
       </div>
     </div>
     <script>
