update Thomas credits

--- a/fourbyfour/program.html
+++ b/fourbyfour/program.html
@@ -68,7 +68,7 @@
           <p>Original music by<br><b>Sophia Cotraccia</b><br><b>Ben Juodvalkis</b></p>
           <p>
             Additional music:“Romance” by Dmitri Shostakovich, arranged by Béla Detrekoy, performed by Sophia Cotraccia</p>
-          <p>Lighting design by<br><b>Thomas Bowersox</b></p>
+          <p>Lighting and scenic design by<br><b>Thomas Bowersox</b></p>
           <p>Production management by<br><b>Thomas Bowersox</b></p>
           <p><i>Four by Four</i> is made possible by contributions from the California Arts Council, ODC Theater’s Rental Discount Initiative, Steppin’ Out Dance Studio, RoundAntennae, and a multitude of generous individual donors.</p>
         </div><img class="img-profile img-heading" src="../../assets/img/fourbyfour/program_note.png" alt="A note from Emily">
@@ -88,7 +88,7 @@
           <composes>original music for dance, film, theater, corporate events, and museum installations. He has created scores for over 50 organizations and has had his music performed on four continents. Ben works from his studio in San Francisco as well as on location with his mobile custom built electronic instruments.</composes>
         </p>
         <p><br></p>
-        <p> <b>Thomas Bowersox (Lighting Designer and Stage Manager) </b>is a lighting designer, production manager, and technical director, based in San Francisco. He graduated from the University of Southern Florida with a BA in Lighting Design. Select companies Thomas has worked with include ODC/Dance, 32 Sounds, The Independent, ACT, Deborah Slater Dance Theater, Club Fugazi, Capital Repertory Theater, and New York Live Arts.</p><img class="img-profile img-heading" src="../../assets/img/fourbyfour/program_connect.png" alt="Connect">
+        <p> <b>Thomas Bowersox (Lighting and Scenic Designer and Production Manager) </b>is a lighting designer, production manager, and technical director, based in San Francisco. He graduated from the University of Southern Florida with a BA in Lighting Design. Select companies Thomas has worked with include ODC/Dance, 32 Sounds, The Independent, ACT, Deborah Slater Dance Theater, Club Fugazi, Capital Repertory Theater, and New York Live Arts.</p><img class="img-profile img-heading" src="../../assets/img/fourbyfour/program_connect.png" alt="Connect">
         <p>Please take a moment to fill out this brief, anonymous, demographic survey. (This information is important for Emily to have so that she can apply for grants and get funding for future projects.)</p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf5rjziTMGGLXBav_yak8t62o0iqyEnpGYg5VBKOed3IgpQbQ/viewform?usp=sf_link" target="_blank">
           <button tabindex="-1">Demographic survey</button></a>
         <p>You’re invited to write a note to the artists, or to share any feelings or responses you have about today’s show, either anonymously or with your name attached.</p><a href="https://docs.google.com/forms/d/e/1FAIpQLSd-HMX6v9WYP5ykwJZG2fT78-QDQMO6cz96zwQkcGHeUz8Oyg/viewform?usp=sf_link" target="_blank">
