--- a/fourbyfour/program.html
+++ b/fourbyfour/program.html
@@ -72,7 +72,22 @@
           <p>Production management by<br><b>Thomas Bowersox</b></p>
           <p><i>Four by Four</i> is made possible by contributions from the California Arts Council, ODC Theater’s Rental Discount Initiative, Steppin’ Out Dance Studio, RoundAntennae, and a multitude of generous individual donors.</p>
         </div><img class="img-profile img-heading" src="../../assets/img/fourbyfour/program_note.png" alt="A note from Emily">
-        <p>TODO —Emily</p><img class="img-profile img-heading" src="../../assets/img/fourbyfour/program_artists.png" alt="Artists">
+        <p>“What’s your show about?”</p>
+        <p>I don’t know. But I can tell you there’s a reason why it’s a dance performance and not a monologue. It’s hard for me to talk about my choreographic work; dance doesn’t function in the same way that language does. But I know that when I go to performances, I always crave the language too. So here’s what I can tell you:</p>
+        <p>Our performance is the result of a process that was centered around a few goals:
+          <ul> 
+            <li>Creating a safe and equitable work environment</li>
+            <li>Being adaptable and flexible</li>
+            <li>Taking our time</li>
+            <li>Practicing ongoing consent</li>
+            <li>Embracing messiness and not knowing</li>
+            <li>Opposing our capitalist tendencies toward productivity</li>
+          </ul>
+        </p>
+        <p>There are several ironies at play here. Our not knowing led us to know new things. We took all the time we wanted until we got to theater week and only had three days to get the show up. In order to create any semblance of refusing capitalism, we spent lots of time considering various economic factors, like contracts, fundraising, and artist pay. And, evidently, our laid back, anti-capitalist studio time delivered a literal product that I’m inviting people to pay to attend.</p>
+        <p>In this product, you’ll witness some fairly abstract stuff—stuff that both means a lot and means nothing at all. Everything has really specific meaning, and everything has whatever meaning you decide it has. There’s plenty to get, nothing to get, you get what you get.</p>
+        <p> <i>Four by Four</i> is for, about, and by the four performers on the stage. And I guess it’s also a little bit for, about, and by me.</p>
+        <p>—Emily</p><img class="img-profile img-heading" src="../../assets/img/fourbyfour/program_artists.png" alt="Artists">
         <p> <img class="img-profile img-heading" src="../../assets/img/fourbyfour/emily2.jpeg" alt="TODO"><b>Emily Hansel, Choreographer and Director</b>, (she/they) is a San Francisco-based dancer, choreographer, dance teacher, arts administrator, and artist advocate. Originally from Rochester, Minnesota, Emily received her BFA in Dance from the University of South Florida. Emily currently dances for Post:ballet, Robert Moses’ KIN, Christy Funsch, and Mark Foehringer Dance Project. Emily has also performed Cunningham repertory in <i>Signals from the West: Bay Area Artists In Conversation with Merce Cunningham at 100</i>and danced with Garrett + Moulton Productions, FACT/SF, ZiRu Dance, The Anata Project, Talli Jackson, Marika Brussel, Alma Esperanza Cunningham, and SOULSKIN Dance, among others </p>
         <p>Emily’s choreographic work centers the dancer’s experience. Most recently, Emily was commissioned to create a new work for the Berkeley Ballet Theater Studio Company, which premiered in March 2022 at BAMPFA. <i>Four by Four</i>is Emily’s first self-produced, evening-length choreographic work. Emily is a RoundAntennae choreographer, under the mentorship of KT Nelson. </p>
         <p>Emily advocates for equitable and ethical working conditions for dancers, and she has written numerous articles on this topic for the “Life as a Modern Dancer” blog. Emily is a proud member of the Leadership Committee at Dance Artists’ National Collective. </p>
