--- a/fourbyfour/program.html
+++ b/fourbyfour/program.html
@@ -72,10 +72,10 @@
           <p>Production management by<br><b>Thomas Bowersox</b></p>
           <p><i>Four by Four</i> is made possible by contributions from the California Arts Council, ODC Theater’s Rental Discount Initiative, Steppin’ Out Dance Studio, RoundAntennae, and a multitude of generous individual donors.</p>
         </div><img class="img-profile img-heading" src="../../assets/img/fourbyfour/program_note.png" alt="A note from Emily">
-        <p>What’s your show about?</p>
+        <p>What’s the show about?</p>
         <p>I don’t know. But I can tell you there’s a reason why it’s a dance performance and not a monologue. It’s hard for me to talk about my choreographic work; dance doesn’t function in the same way that language does. But I know that when I go to performances, I always crave the language, too. So here’s what I can tell you:</p>
         <p>Our performance is the result of a process that was centered around a few goals:
-          <ul> 
+          <ul class="dashed">
             <li>Creating a safe and equitable work environment</li>
             <li>Being adaptable and flexible</li>
             <li>Taking our time</li>
@@ -101,15 +101,17 @@
         <p><br></p>
         <p> <b>Ben Juodvalkis, Composer and Musician</b>, (he/him) composes original music for dance, film, theater, corporate events, and museum installations. He has created scores for over 50 organizations and has had his music performed on four continents. Ben works from his studio in San Francisco as well as on location with his mobile custom built electronic instruments.</p>
         <p><br></p>
-        <p> <b>Thomas Bowersox, Lighting and Scenic Designer and Production Manager</b>, (he/him) is a lighting designer, production manager, and technical director, based in San Francisco. He graduated from the University of Southern Florida with a BA in Lighting Design. Select companies Thomas has worked with include ODC/Dance, 32 Sounds, The Independent, ACT, Deborah Slater Dance Theater, Club Fugazi, Capital Repertory Theater, and New York Live Arts.</p><img class="img-profile img-heading" src="../../assets/img/fourbyfour/program_connect.png" alt="Connect">
-        <p>Please take a moment to fill out this brief, anonymous, demographic survey. (This information is important for Emily to have so that she can apply for grants and get funding for future projects.)</p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf5rjziTMGGLXBav_yak8t62o0iqyEnpGYg5VBKOed3IgpQbQ/viewform?usp=sf_link" target="_blank">
+        <p> <b>Thomas Bowersox, Lighting and Scenic Designer and Production Manager</b>, (he/him) is a lighting designer, production manager, and technical director, based in San Francisco. He graduated from the University of Southern Florida with a BA in Lighting Design. Select companies Thomas has worked with include ODC/Dance, 32 Sounds, The Independent, ACT, Deborah Slater Dance Theater, Club Fugazi, Capital Repertory Theater, and New York Live Arts.</p>
+        <p><br></p>
+        <p><i>Dancer photos by Steve Disenhof. Emily’s photo by Robbie Sweeny.</i></p><img class="img-profile img-heading" src="../../assets/img/fourbyfour/program_connect.png" alt="Connect">
+        <p>Please take a moment to fill out this brief, anonymous, demographic survey. (This information is important for Emily to have when applying to get funding for future projects.)</p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf5rjziTMGGLXBav_yak8t62o0iqyEnpGYg5VBKOed3IgpQbQ/viewform?usp=sf_link" target="_blank">
           <button tabindex="-1">Demographic survey</button></a>
         <p>You’re invited to write a note to the artists, or to share any feelings or responses you have about today’s show, either anonymously or with your name attached.</p><a href="https://docs.google.com/forms/d/e/1FAIpQLSd-HMX6v9WYP5ykwJZG2fT78-QDQMO6cz96zwQkcGHeUz8Oyg/viewform?usp=sf_link" target="_blank">
           <button tabindex="-1">Share a response</button></a>
         <p>If you want to stay in touch, you can email Emily at <a href="mailto:emily@emilyhansel.me">emily@emilyhansel.me</a> or subscribe to her email newsletters to stay in the loop.</p><a href="https://docs.google.com/forms/d/e/1FAIpQLScB-Vb7sSYFlD8ob0Lc_rr00DsfiYI31Um1NMOlfp72rIpiOw/viewform?usp=sf_link" target="_blank">
           <button tabindex="-1">Subscribe</button></a>
-        <p>You’re invited to take a look at the <a href="https://docs.google.com/spreadsheets/d/17Y3JT9glywDPLDD9cYtv2FwYSViGZLAsBNb8fDeneYM/edit?usp=sharing" target="_blank">project budget</a> to learn more about the expenses involved in producing <i>Four by Four</i>. If you’re interested in making a donation to support the work, you can do so via Venmo (@EmilyHansel) or Paypal (<a href="http://paypal.me/emhansel" target="_blank">paypal.me/emhansel</a>).</p>
-        <p style="margin: 2.5rem 0 1rem; display: flex; justify-content: center"><img src="../../assets/img/fourbyfour/kids/tiles.png" width="240px" style="margin: 0"></p><a href="/assets/ABOUT_ODC_THEATER.pdf?v=1">Learn more about ODC theatre</a>
+        <p>You’re invited to check out the <a href="https://docs.google.com/spreadsheets/d/17Y3JT9glywDPLDD9cYtv2FwYSViGZLAsBNb8fDeneYM/edit?usp=sharing" target="_blank">project budget</a> to learn more about the expenses involved in producing <i>Four by Four</i>. If you’re interested in making a donation to support the work, you can do so via Venmo (@EmilyHansel) or Paypal (<a href="http://paypal.me/emhansel" target="_blank">paypal.me/emhansel</a>).</p>
+        <p style="margin: 2.5rem 0 1rem; display: flex; justify-content: center"><img src="../../assets/img/fourbyfour/kids/tiles.png" width="240px" style="margin: 0"></p><a href="/assets/ABOUT_ODC_THEATER.pdf?v=1">Learn more about ODC Theater</a>
       </div>
     </div>
     <script>
