--- a/fourbyfour/program.html
+++ b/fourbyfour/program.html
@@ -66,8 +66,7 @@
           <p>Choreographed and directed by<br><b>Emily Hansel</b></p>
           <p>Co-created and performed by<br><b>Alex Carrington</b><br><b>Mia J. Chong</b><br><b>Shareen DeRyan</b><br><b>Chelsea Reichert</b></p>
           <p>Original music by<br><b>Sophia Cotraccia</b><br><b>Ben Juodvalkis</b></p>
-          <p>
-            Additional music:“Romance” by Dmitri Shostakovich, arranged by Béla Detrekoy, performed by Sophia Cotraccia</p>
+          <p>Additional music:<br>“Romance” by Dmitri Shostakovich, arranged by Béla Detrekoy, performed by Sophia Cotraccia</p>
           <p>Lighting and scenic design by<br><b>Thomas Bowersox</b></p>
           <p>Production management by<br><b>Thomas Bowersox</b></p>
           <p><i>Four by Four</i> is made possible by contributions from the California Arts Council, ODC Theater’s Rental Discount Initiative, Steppin’ Out Dance Studio, RoundAntennae, and a multitude of generous individual donors.</p>
