remove captions sentence

--- a/fourbyfour/video.html
+++ b/fourbyfour/video.html
@@ -43,7 +43,7 @@
     <div class="body-container bio">
       <h1 class="hero"><a href="/fourbyfour"><img src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%"></a></h1>
       <div class="bio-container no-animation">
-        <p>A film version of <i>Four by Four</i> will be available on-demand July 1-31, 2022. This video will include open captions in English. You will be emailed instructions for accessing the film on or before July 1, 2022.</p>
+        <p>A film version of <i>Four by Four</i> will be available on-demand July 1-31, 2022. You will be emailed instructions for accessing the film on or before July 1, 2022.</p>
         <p>This film is available at a variety of price points and patrons are encouraged to consider their economic status when deciding which price to pay.</p>
         <p>How much would you like to pay to access the <i>Four by Four</i> film?</p>
         <ul class="button-group"><a href="https://www.google.com/url?q=https://docs.google.com/forms/d/e/1FAIpQLScqS1OaKyi67SjiSAvNPPkVx23l4p-tiMQ4Bw4SirBB2UqKrg/viewform?usp%3Dsf_link&amp;sa=D&amp;source=docs&amp;ust=1650136235800495&amp;usg=AOvVaw1nENQ3nAwH8MUnQmh-6Ot6" target="_blank"> 
