update home page w/ /writing

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="menu-item"><span class="menu-button" tabindex="0">works</span>
           <ul class="sub-menu">
             <li><a class="site-link" href="/choreography" alt="choreography">choreography</a></li>
-            <li><a class="site-link" href="/fourbyfour" alt="Four by Four">Four by Four</a></li>
+            <li><a class="site-link" href="/writing" alt="Four by Four">writing</a></li>
           </ul>
         </div>
         <div class="menu-item"><span class="menu-button" tabindex="0"> galleries</span>
