remove other animations

--- a/digital-art/index.html
+++ b/digital-art/index.html
@@ -43,7 +43,7 @@
     <div class="home-button"><a href="/" alt="Emily"><img src="../assets/img/dancing/crop/3.png"></a></div>
     <div class="rightImage"><img src="../assets/img/insatiable.png"></div>
     <div class="body-container bio">
-      <div class="bio-container digital-art-container no-animation">
+      <div class="bio-container digital-art-container">
         <h1>Digital Art</h1><br><br><br>
         <p>Coming soon</p>
       </div>
