--- a/fourbyfour/ask.html
+++ b/fourbyfour/ask.html
@@ -41,7 +41,7 @@
       </form>
     </div>
     <div class="body-container bio">
-      <div class="bio-container no-animation">
+      <div class="bio-container">
         <p>
           Hello respected colleagues and friends,
           
