--- a/fourbyfour/index.html
+++ b/fourbyfour/index.html
@@ -42,7 +42,7 @@
     </div>
     <div class="body-container bio">
       <h1 class="hero"><a href="/fourbyfour"><img src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%"></a></h1>
-      <div class="bio-container no-animation">
+      <div class="bio-container">
         <div class="heading"> 
           <p> 
             <ul>
