--- a/fourbyfour/kids.html
+++ b/fourbyfour/kids.html
@@ -42,7 +42,7 @@
     </div>
     <div class="body-container bio">
       <h1 class="hero"><a href="/fourbyfour"><img src="../../assets/img/fourbyfour/kids/title.png" alt="Theater takeover workshop with teacher Emily" width="96%"></a></h1>
-      <div class="bio-container no-animation">
+      <div class="bio-container">
         <p><b>Saturday, May 28th at 3:00pm</b><br>Followed by a 4:00 performance of Emily’s new production, <i><a href="/fourbyfour">Four by Four</a></i></p>
         <p><b>For kids ages 5-12 </b>(who are fully vaccinated)</p>
         <p><b>At <a href="https://goo.gl/maps/Yi3HGVvcA7W7RpcL6" target="_blank">ODC Theater</a> </b>in San Francisco’s Mission District</p>
