--- a/fourbyfour/program.html
+++ b/fourbyfour/program.html
@@ -42,7 +42,7 @@
     </div>
     <div class="body-container program-container bio">
       <h1 class="hero"><a href="/fourbyfour/program"><img src="../../assets/img/fourbyfour/program_title.png" alt="Four by Four" width="90%"></a></h1>
-      <div class="bio-container no-animation">
+      <div class="bio-container">
         <div class="heading"> 
           <ul>
             <li>May 26-28, 2022</li>
