--- a/fourbyfour/video.html
+++ b/fourbyfour/video.html
@@ -42,7 +42,7 @@
     </div>
     <div class="body-container bio">
       <h1 class="hero"><a href="/fourbyfour"><img src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%"></a></h1>
-      <div class="bio-container no-animation">
+      <div class="bio-container">
         <p>A film version of <i>Four by Four</i> will be available on-demand July 1-31, 2022. You will be emailed instructions for accessing the film on or before July 1, 2022.</p>
         <p>This film is available at a variety of price points and patrons are encouraged to consider their economic status when deciding which price to pay.</p>
         <p>How much would you like to pay to access the <i>Four by Four</i> film?</p>
