--- a/fourbyfour/heatherdesaulniers.html
+++ b/fourbyfour/heatherdesaulniers.html
@@ -41,8 +41,8 @@
       </form>
     </div>
     <div class="home-button"><a href="/" alt="Emily"> <img class="flip" src="../assets/img/dancing/crop/1.png"></a></div>
-    <div class="body-container bio no-animation">
-      <div class="bio-container no-animation">
+    <div class="body-container bio">
+      <div class="bio-container">
         <h1>Thoughts on “Four by Four”</h1>
         <p>by Heather Desaulniers<br>June 11, 2022</p>
         <figure><img src="../assets/img/fourbyfour/performance_1.jpeg" width="100%" alt="Four dancers, each wearing a different color, lay in nearly identical positions on a stark floor.">
