--- a/photos/index.html
+++ b/photos/index.html
@@ -46,23 +46,24 @@
         <div class="x">
           <h1 id="photo">Photos</h1>
           <div class="grid js-masonry" data-masonry="{ &quot;itemSelector&quot;: &quot;.grid-item&quot;, &quot;columnWidth&quot;: 316, &quot;fitWidth&quot;: true }">
-            <div class="grid-item"><img src="../assets/img/dancing/masonry/28.jpg" data-action="zoom" data-caption=""></div>
-            <div class="grid-item"><img src="../assets/img/dancing/masonry/15.jpg" data-action="zoom" data-caption=""></div>
-            <div class="grid-item"><img src="../assets/img/dancing/masonry/27.jpg" data-action="zoom" data-caption=""></div>
-            <div class="grid-item"><img src="../assets/img/dancing/masonry/25.jpg" data-action="zoom" data-caption=""></div>
-            <div class="grid-item"><img src="../assets/img/dancing/masonry/24.jpg" data-action="zoom" data-caption=""></div>
-            <div class="grid-item"><img src="../assets/img/dancing/masonry/23.jpg" data-action="zoom" data-caption=""></div>
-            <div class="grid-item"><img src="../assets/img/dancing/masonry/22.jpg" data-action="zoom" data-caption=""></div>
-            <div class="grid-item"><img src="../assets/img/dancing/masonry/29.jpg" data-action="zoom" data-caption=""></div>
-            <div class="grid-item"><img src="../assets/img/dancing/masonry/21.jpg" data-action="zoom" data-caption=""></div>
-            <div class="grid-item"><img src="../assets/img/dancing/masonry/26.jpg" data-action="zoom" data-caption=""></div>
-            <div class="grid-item"><img src="../assets/img/dancing/masonry/19.jpg" data-action="zoom" data-caption=""></div>
-            <div class="grid-item"><img src="../assets/img/dancing/masonry/18.jpg" data-action="zoom" data-caption=""></div>
-            <div class="grid-item"><img src="../assets/img/dancing/masonry/17.png" data-action="zoom" data-caption=""></div>
-            <div class="grid-item"><img src="../assets/img/dancing/masonry/16.jpg" data-action="zoom" data-caption=""></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/28.jpg" data-action="zoom" data-caption="Photograph by Maximillian Tortoriello | 2022"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/15.jpg" data-action="zoom" data-caption="&lt;i&gt;Through and Through&lt;/i&gt; | Choreography by Mia J. Chong | Photograph by RJ Muna | 2022"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/24.jpg" data-action="zoom" data-caption="&lt;i&gt;EPOCH&lt;/i&gt; | Choreography by Christy Funsch | Photograph by Robbie Sweeny | 2021"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/25.jpg" data-action="zoom" data-caption="&lt;i&gt;EPOCH&lt;/i&gt; | Choreography by Christy Funsch | Photograph by Robbie Sweeny | 2021"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/23.jpg" data-action="zoom" data-caption="&lt;i&gt;kid subjunctive&lt;/i&gt; | Choreography by Christy Funsch | Photograph by Robbie Sweeny | 2022"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/22.jpg" data-action="zoom" data-caption="&lt;i&gt;say i am you&lt;/i&gt; | Choreography by Moscelyne ParkeHarrison | Photograph by Natalia Perez | 2022"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/27.jpg" data-action="zoom" data-caption="Photograph by Tricia Cronin for Post:ballet | 2020"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/29.jpg" data-action="zoom" data-caption="Photograph by Maximillian Tortoriello | 2022"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/20.jpg" data-action="zoom" data-caption="Photograph by Maximillian Tortoriello | 2022"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/19.jpg" data-action="zoom" data-caption="Photograph by Maximillian Tortoriello | 2022"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/21.jpg" data-action="zoom" data-caption="Photograph by Maximillian Tortoriello | 2022"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/26.jpg" data-action="zoom" data-caption="Photograph by Tricia Cronin for Post:ballet | 2020"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/18.jpg" data-action="zoom" data-caption="&lt;i&gt;The Soft Solace of a Slightly Descended Lost Life (Suck It)&lt;/i&gt; | Choreography by Robert Moses | Photograph by Steve Disenhof | 2021"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/17.png" data-action="zoom" data-caption="Post:ballet's &lt;i&gt;Nutcracker&lt;/i&gt; | Choreography by Robin Dekkers | Photograph by Reneff-Olson Productions | 2021"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/16.jpg" data-action="zoom" data-caption="&lt;i&gt;Through and Through&lt;/i&gt; | Choreography by Mia J. Chong | Photograph by RJ Muna | 2022"></div>
             <div class="grid-item"><img src="../assets/img/dancing/masonry/1.jpg" data-action="zoom" data-caption="&lt;i&gt;The Exceptionally Elderly Overweight Black Man Phoenix&lt;/i&gt; | Choreography by Robert Moses | Photograph by Jim Coleman | 2019"></div>
             <div class="grid-item"><img src="../assets/img/dancing/masonry/2.jpg" data-action="zoom" data-caption="&lt;i&gt;BIG SALT&lt;/i&gt; | Photograph by Summer Wilson for The Anata Project | 2019"></div>
-            <div class="grid-item"><img src="../assets/img/dancing/masonry/3.jpg" data-action="zoom" data-caption="&lt;i&gt;Belong Not&lt;/i&gt; | Choreography by Chuck Wilt for Post:Ballet | Photograph by Alexander Reneff-Olson | 2020"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/3.jpg" data-action="zoom" data-caption="&lt;i&gt;Belong Not&lt;/i&gt; | Choreography by Chuck Wilt for Post:ballet | Photograph by Alexander Reneff-Olson | 2020"></div>
             <div class="grid-item"><img src="../assets/img/dancing/masonry/4.jpg" data-action="zoom" data-caption="&lt;i&gt;Roaratorio&lt;/i&gt; | Choreography by Merce Cunningham | Photograph by Hillary Goidell | 2019"></div>
             <div class="grid-item"><img src="../assets/img/dancing/masonry/5.jpg" data-action="zoom" data-caption="&lt;i&gt;Biped&lt;/i&gt; | Choreography by Merce Cunningham | Photograph by Hillary Goidell | 2019"></div>
             <div class="grid-item"><img src="../assets/img/dancing/masonry/6.jpg" data-action="zoom" data-caption="&lt;i&gt;Simple Symphony&lt;/i&gt; | Choreography by Mark Foehringer | Photograph by Matt Haber | 2019"></div>
