--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li><a class="site-link" href="/assets/resume.pdf?v=2" target="_blank" alt="resume">resume</a></li>
           </ul>
         </div>
-        <div class="menu-item"><span class="menu-button" tabindex="0">works</span>
+        <div class="menu-item"><span class="menu-button" tabindex="0">work</span>
           <ul class="sub-menu">
             <li><a class="site-link" href="/choreography" alt="choreography">choreography</a></li>
             <li><a class="site-link" href="/writing" alt="Four by Four">writing</a></li>
