--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,7 @@
             <li><a class="site-link" href="/writing" alt="Four by Four">writing</a></li>
           </ul>
         </div>
+        <div class="menu-item"><span class="menu-button"><a href="/press">press</a></span></div>
         <div class="menu-item"><span class="menu-button" tabindex="0"> galleries</span>
           <ul class="sub-menu">
             <li><a class="site-link" href="/photos" alt="photos">photos</a></li>
